--- a/ccs/estilos.css
+++ b/ccs/estilos.css
@@ -65,6 +65,7 @@
     
 }
 
+
 .logo span{ 
     width: 100%;
     height: 100%;
@@ -104,36 +105,61 @@ color: #9a7352;
 }
 
 /* --------------------------------INDEX--------------------------------------------------- */
+.contenedor{
+    display: grid;
+}
 .contenedorBanner{
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     background-color:#f6f1f0;
     display: grid;
-    grid-template-columns: none;
+    grid-template-rows:50% 50%;
+    background-image: url(../img/baner/bc9b2fd5-e11f-46b4-8efe-3a8acffb479f.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.contenedorBanner button{
+position: absolute;
+left: 2%;
+top: 25%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+background-color: #555;
+color: white;
+font-size: 16px;
+padding: 12px 24px;
+border: none;
+cursor: pointer;
+border-radius: 5px;
 }
 
 .tituloBanner{
-    color: #626C66;
+    color: #555;
     font-size: 60px;
     font-family: cursive;
     grid-template-columns:none;
     align-self:center;
     justify-self:center;
+    top: 15%;
+    animation:backInDown; 
+    animation-duration: 2s;  
 }
-
 .textoBanner{
-    color: #918B76;
+    color: #555;
     font-size: 25px;
     font-family: cursive;
     width: 300px;
     grid-template-columns: 1/2;
     grid-template-rows: auto;
-    align-self: flex-end;
+    align-self: center;
     justify-self: center;
-    text-align: center;
-    
+    text-align: center; 
+    animation:fadeInLeft ; 
+    animation-duration: 2s; 
     
 }
+
 .tituloPrincipal h1{
 display: grid;
 grid-template-columns: none;
@@ -153,13 +179,37 @@ text-shadow: 2px 4px 10px #9a7352;
     float: left;
 }
 
-h2{
-    font-size: 20px;
-    font-family: cursive;
-    color: #9a7352;
-    text-align: center;
-    text-transform: capitalize;
+.centrar{
+display: grid;
+grid-template-columns: auto;
+gap: 10px;
+margin: 20px;
 }
+
+h2{
+grid-area: 1 / 2;
+display: flex;
+align-self: center;
+justify-content: center;
+font-family: cursive;
+border: solid 2px;
+border-color: #ACA885;
+height: 50px;
+width: 400px;
+border-radius: 20px;
+box-shadow: 4px 4px 20px rgb(128 128 128 / 50%);
+transition: width 3s;
+transition-delay: 1s;
+}
+h2{
+    -webkit-transition: 1s linear;
+    transition: 1s linear;
+}
+h2:hover{
+    -webkit-box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+    box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+}
+
 
 .galeria{
     height: 600px;
@@ -212,6 +262,7 @@ background-position: center;
 background-size: cover;
 }
 
+
 .pasoPedido{
 display: grid;
 grid-template-columns: none;
@@ -227,11 +278,13 @@ grid-template-columns: none;
 
 .bonotesMediosDePago{
     justify-self: center;
-    
+    transition: width 10s;
 }
 
 .bonotesMediosDePago button:hover {
-    background-color: #9a7352 ;
+    width: 300px;
+    border: 4px solid #918B76 (100, 100, 100, 1);
+    border-radius: 4px;
 }
 
 .cajaFormulario{
@@ -346,10 +399,21 @@ footer p{
 .contenedorNos{
     width: 100%;
     height: 40vh;
-    background-color:#9a7352;
+    background-image: linear-gradient(270deg, #b49d7f 0, #ad9172 16.67%, #a58363 33.33%, #9a7252 50%, #8f6142 66.67%, #875336 83.33%, #80482d 100%);
     display: grid;
-    grid-template-columns: none;
+    grid-template-columns: 30% 40% 30%;
 }
+.contenedorNos img{
+    color: #626C66;
+    font-size: 60px;
+    font-family: cursive;
+    grid-template-columns:none;
+    align-self:center;
+    justify-self:center;
+    grid-template-columns:none;
+    height: 100%;
+}
+
 .contenedorNos h1{
     color: #626C66;
     font-size: 60px;
@@ -357,10 +421,10 @@ footer p{
     grid-template-columns:none;
     align-self:center;
     justify-self:center;
-
+    top: 30%;
 }
 
-.contenedorNos h2{
+.contenedorNos p{
     color: #f6f1f0;
     font-size: 25px;
     font-family: cursive;
@@ -370,9 +434,7 @@ footer p{
     align-self: flex-start;
     justify-self: end;
     
-
 }
-
 
 .contenedorNos h1 span{
     color:#243e3d;
@@ -398,15 +460,28 @@ text-align: center;
 }
 .listaNosotros{
     margin-left: 50px;
+    font-size: 20px;
 }
 
 .textoNosotros{
+    font-size: 25px;
     margin-left: 5px;
+    text-align: justify;
 }
+/* --------------------------------------------PRODUCTOS-------------------------------------------------- */
+.contenedorBannerP{
+        width: 100%;
+        height: 50vh;
+        background-color:#f6f1f0;
+        display: grid;
+        grid-template-rows:50% 50%;
+        background-position: center;
+        background-size: cover;
+    }
 
 .tituloProductos{
 color: #243e3d;
-font-size: 20px;
+font-size: 30px;
 font-family:cursive;
 text-shadow: 2px 4px 10px #9a7352;
 text-align: center;
@@ -427,30 +502,42 @@ text-align: center;
     
 }
 /* --------------------------------CONTACTO-------------------------------------------------- */
+.contenedorContacto{
+
+    display: grid;
+    grid-template-rows: 5% 5% 0% 30% 5% 55%;
+    grid-template-columns: 100%;
+}
 .tituloContacto{
+    grid-template-rows: 1/2;
+    justify-self: center;
     color: #243e3d;
     font-size: 30px;
     font-family:cursive;
     text-shadow: 2px 4px 10px #9a7352;
     text-align: center;
-    margin-left: 450px;
 }
 
 .pContacto{
+    grid-template-rows: 2/3;
     font-family: cursive;
     text-align:justify;
     font-weight: bold;
     color: #9a7352;
-    margin-left: 450px;
+    margin-left: 5px;
+}
+.informacionContacto{
+    grid-template-rows: 3/4;
 }
 
 .subtituloConsultanos{
+    grid-template-rows: 4/5;
     color: #243e3d;
     font-size: 30px;
     font-family:cursive;
     text-shadow: 2px 4px 10px #9a7352;
     text-align: center;
-    margin-left:450px;
+    justify-self: center;
 }
 .tituloIngresar{
     color: #243e3d;
