--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,6 +1,16 @@
 .navbar {
   background-color: #ACA885;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  height: 60px;
+}
+.navbar .logoNav {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-shadow: 0 0 5px wheat;
+  justify-content: flex-start;
+  margin-top: 5px;
+}
+.navbar .pagesNav {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .navbar a.nav-link {
   color: #243e3d !important;
@@ -16,6 +26,13 @@
   height: 350px;
   color: aliceblue;
   text-shadow: 0 0 5px #243e3d;
+}
+
+.tituloIndex {
+  color: #243e3d;
+  text-shadow: 0 0 4px white;
+  font-weight: bold;
+  font-size: 40px;
 }
 
 .btn-secondary {
@@ -53,18 +70,21 @@ h3 {
 }
 
 /* nosotros */
+.contenedorNosotros {
+  background: linear-gradient(to top, #f5f4ef, white);
+}
 
 /* productos */
 h1 {
   color: #243e3d;
   text-shadow: 0 0 5px black;
   font-family: cursive;
+  font-size: 30px;
+  text-align: center;
 }
 
 .carouselProducto img {
-  object-fit: cover;
-  height: 200px;
-  width: 100%;
+  height: 25vh;
 }
 
 .carousel-indicators li {
@@ -119,12 +139,6 @@ footer {
 .contacto {
   background-color: #243e3d;
   color: antiquewhite;
-}
-
-.pNos {
-  background-color: aqua;
-  height: 200px;
-  width: 100%;
 }
 
 /*# sourceMappingURL=estilos.css.map */
