--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,22 +1,28 @@
 .navbar {
   background-color: #ACA885;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  height: 60px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
 .navbar .logoNav {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-shadow: 0 0 5px wheat;
-  justify-content: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin-top: 5px;
 }
+
 .navbar .pagesNav {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 .navbar a.nav-link {
   color: #243e3d !important;
 }
+
 .navbar a:hover {
-  background-color: aliceblue;
+  -webkit-box-shadow: 0 0 5px #f5f4ef;
+          box-shadow: 0 0 5px #f5f4ef;
 }
 
 .jumbotron {
@@ -46,7 +52,8 @@ h2 {
 }
 
 .productos-fila img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 450px;
   width: 100%;
 }
@@ -55,8 +62,21 @@ h2 {
   text-shadow: 0 0 6px #243e3d;
   font-size: 20px;
 }
+
 .carousel-item p {
   text-shadow: 0 0 5px #243e3d;
+}
+
+.mediosDePago {
+  padding-top: 20px;
+  color: #243e3d;
+  text-align: center;
+}
+
+.mediosDePago:hover {
+  -webkit-box-shadow: 0 0 5px #ACA885;
+          box-shadow: 0 0 5px #ACA885;
+  background-color: #f5f4ef;
 }
 
 h3 {
@@ -64,27 +84,88 @@ h3 {
   text-shadow: 0 0 5px #243e3d;
 }
 
+h4 {
+  color: #ACA885;
+}
+
 .form {
-  background-color: #ACA885;
-  width: 50%;
+  border: 2px solid #243e3d;
+  width: 100%;
+  background-color: #f5f4ef;
+}
+
+.tituloMiniForm {
+  color: #ACA885;
+  font-weight: bold;
+}
+
+.textMiniForm {
+  font-weight: bold;
+  text-align: center;
 }
 
 /* nosotros */
 .contenedorNosotros {
+  background: -webkit-gradient(linear, left bottom, left top, from(#f5f4ef), to(white));
   background: linear-gradient(to top, #f5f4ef, white);
+}
+
+.subtitulosNos {
+  color: #ACA885;
+  text-shadow: none;
+}
+
+.containerEach {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.tienda-icon,
+.equipo-icon,
+.deco-icon {
+  height: 250px;
+  width: 400px;
+  border: 2px solid #ACA885;
+}
+
+.tienda-icon {
+  background-image: url("../img/nosotros/tienda-icon.jpg");
+  background-size: contain;
+  -webkit-box-shadow: 0 0 5px black;
+          box-shadow: 0 0 5px black;
+}
+
+.equipo-icon {
+  background-image: url("../img/nosotros/equipo-icon.jpg");
+  background-size: contain;
+  -webkit-box-shadow: 0 0 5px black;
+          box-shadow: 0 0 5px black;
+}
+
+.deco-icon {
+  background-image: url("../img/nosotros/deco-icon.jpg");
+  background-size: contain;
+  -webkit-box-shadow: 0 0 5px black;
+          box-shadow: 0 0 5px black;
 }
 
 /* productos */
 h1 {
-  color: #243e3d;
-  text-shadow: 0 0 5px black;
+  color: #ACA885;
+  text-shadow: 1px 1px 2px #243e3d;
   font-family: cursive;
   font-size: 30px;
   text-align: center;
+  font-weight: bold;
 }
 
 .carouselProducto img {
-  height: 25vh;
+  height: 30vh;
 }
 
 .carousel-indicators li {
@@ -97,18 +178,44 @@ h1 {
 }
 
 .card img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 200px;
   width: 100%;
 }
 
 .card-img-top:hover {
-  filter: saturate(180%);
+  -webkit-filter: saturate(180%);
+          filter: saturate(180%);
 }
 
+/* ingresar */
+.textoIngresar {
+  color: #243e3d;
+  text-shadow: 0 0 5px #243e3d;
+}
+
+.form-group {
+  color: #243e3d;
+}
+
+/* footer */
 footer {
   background-color: #ACA885;
-  color: rgb(248, 248, 248);
+  color: #f8f8f8;
+  padding: 10px;
+}
+
+.fa-brands {
+  color: #243e3d;
+  text-decoration: none;
+}
+
+.fa-brands:hover {
+  color: #243e3d;
+  -webkit-box-shadow: 0 0 5px wheat;
+          box-shadow: 0 0 5px wheat;
+  text-decoration: none;
 }
 
 .tituloFooter {
@@ -120,25 +227,46 @@ footer {
 
 .listaFooter {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  text-align: center;
+  justify-self: center;
 }
 
 .listaFooter a {
   text-decoration: none;
   color: #243e3d;
-  text-shadow: 0 0 5px whitesmoke;
   font-size: 15px;
   padding-bottom: 5px;
+}
+
+.nav-link:hover {
+  color: #243e3d;
+  -webkit-box-shadow: 0 0 5px wheat;
+          box-shadow: 0 0 5px wheat;
+  text-decoration: none;
 }
 
 @media (max-width: 765px) {
   .d-none {
     display: block !important;
   }
+  .listaFooter {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
+
 /* contacto */
 .contacto {
   background-color: #243e3d;
   color: antiquewhite;
 }
-
 /*# sourceMappingURL=estilos.css.map */
